[package]
name = "joystick_module"
version = "0.1.0"
authors = ["MechWipf <MechWipf@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cxx-build = "1.0"

[dependencies]
cxx = "1.0"
gm_joystick_rs = { path = "../joystick" }
glob = "0.3.2"